--- a/Museum Candy Project/app.css
+++ b/Museum Candy Project/app.css
@@ -4,7 +4,7 @@ body {
 }
 
 .blurb h2 {
-    color:#EA1C2C;
+    color: #EA1C2C;
     font-weight: 100;
     font-size: 2.5rem;
 }
@@ -28,19 +28,19 @@ body {
 
 #mainNavbar .nav-link {
     color: white;
-    }
+}
 
 #mainNavbar .nav-link:hover {
-   color:#EA1C2C;
+    color: #EA1C2C;
 }
 
 #mainNavbar .navbar-brand {
-    color:#EA1C2C;
+    color: #EA1C2C;
     font-size: 1.5rem;
 }
 
 #headingGroup span {
-    color:#EA1C2C;
+    color: #EA1C2C;
 }
 
 #headingGroup h1 {
@@ -48,15 +48,15 @@ body {
 }
 
 .navbar.scrolled {
-    background: rgb(222,192,222);
+    background: rgb(222, 192, 222);
     transition: background 500ms;
 }
 
 @media (max-width: 1200px) {
-       
-        #headingGroup h1 {
-            font-weight: 100;
-            font-size: 3rem;
-        }
-        
+
+    #headingGroup h1 {
+        font-weight: 100;
+        font-size: 3rem;
     }
+
+}
